# auto-mobile

./: .dockerignore  .editorconfig  .gitattributes  .github-issue-autocomplete.md  .github-issue-ide-plugin-ci-improvements.md  .github-issue-test-plan-validation.md  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .lycherc.toml  .mcp.json  .mcp.json.example  .mocharc.json  .npmignore  .npmrc  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PARALLEL-EXECUTION-VERIFIED.md  PUBLISHING.md  Package.swift  README.md  SECURITY.md  build.ts  bunfig.toml  dead-code-allowlist.json  docker-compose.yml  eslint.config.mjs  firebender.json  jemalloc-5.3.0.tar.bz2  (+9 more)
.claude/: settings.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.config/: kysely.config.ts
.githooks/: pre-commit
.github/: CONTRIBUTING.md  bug_report.md  dependabot.yml  feature_request.md
android/: .gitignore  CLAUDE.md  README.md  build.gradle.kts  firebender.json  gradle.properties  owasp-suppressions.xml  pocketcasts_navigation.md  settings.gradle.kts
baseline/: memory-leak-baseline.json
benchmark/: contrast-performance.ts  startup-baseline.json  talkback-detection-performance.ts  voiceover-detection-performance.ts
demo/: README.md  WORKFLOWS.md
docs/: MIGRATION_swipeOn.md  SCREEN_FINGERPRINTING.md  android-ide-plugin.md  android-work-profiles.md  ci.md  (+22 more)
scripts/github/: deploy_pages.py  pyproject.toml
scripts/github/auto_mobile_docs/: __init__.py
(+2709 files in other folders)
