[project]
name = "auto-mobile-docs"
version = "0.1.0"
description = "Documentation build dependencies for AutoMobile MCP"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.14",
  "mkdocs-minify-plugin>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_mobile_docs"]
